# vote-abstention

./: README.md  stack.yaml  vote-abstention.cabal
src/: Lib.hs  Sondages.hs
