name:                vote-abstention
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adelanoe/vote-abstention#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandre Delanoë
maintainer:          devel@delanoe.org
copyright:           Copyright: (c) 2017 Alexandre Delanoë
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      , Sondages
  build-depends:       base >= 4.7 && < 5
                      , containers
                      , time
                      , text
                      , data-time-segment
                      , vector
                      , statistics-linreg
  default-language:    Haskell2010

-- executable vote-abstention-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , vote-abstention
--   default-language:    Haskell2010
-- 
test-suite vote-abstention-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vote-abstention
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adelanoe/vote-abstention
